@@ -67,12 +67,23 @@ public class UsuarioImplService implements UsuarioService {
     PessoaFisicaService pessoaFisicaService;
 
     @Override
-    public List<UsuarioResponseDTO> getAll() {
+    public List<UsuarioResponseDTO> getAllUsuario() {
 
         return usuarioRepository.findAll()
-                .stream()
-                .map(UsuarioResponseDTO::new)
-                .collect(Collectors.toList());
+                                    .stream()
+                                    .filter(usuario -> usuario.getPerfis().contains(Perfil.USER) || usuario.getPerfis().contains(Perfil.ADMIN))
+                                    .map(UsuarioResponseDTO::new)
+                                    .toList();
+    }
+
+    @Override
+    public List<UsuarioBasicoResponseDTO> getAllUsuarioBasico() {
+
+        return usuarioRepository.findAll()
+                                    .stream()
+                                    .filter(usuario -> usuario.getPerfis().contains(Perfil.USER_BASIC))
+                                    .map(UsuarioBasicoResponseDTO::new)
+                                    .toList();
     }
 
     @Override
@@ -234,6 +245,8 @@ public class UsuarioImplService implements UsuarioService {
             entity.setTelefoneOpcional(insertTelefone(usuarioDto.telefoneOpcional()));
 
         entity.addPerfis(Perfil.USER);
+
+        entity.removePerfis(Perfil.USER_BASIC);
 
         return new UsuarioResponseDTO(entity);
     }
